--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
   --registration-bg: linear-gradient(180deg, #ff9090 0%, #e1c0b6 100%);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--body);
   padding: 0;
@@ -15,6 +19,11 @@ body {
 h1,
 p {
   margin: 0;
+}
+
+h1, article {
+  position: relative;
+  z-index: 1;
 }
 
 h1 {
@@ -32,8 +41,6 @@ article {
   grid-template-columns: 1fr;
   margin: 0 calc(3 / 48 * 100vw);
   max-width: calc(28 / 48 * 100vw);
-  position: relative;
-  z-index: 1;
 }
 
 p {
@@ -73,16 +80,20 @@ p.inset {
   color: white;
   font-family: "Clash Grotesk", sans-serif;
   letter-spacing: 0.05em;
+
+  transition: height ease-in-out 1s;
 }
 
 .countdown > .election {
   background: var(--election-bg);
   left: calc(1 / 48 * 100vw);
+  height: 100%;
 }
 
 .countdown > .registration {
   background: var(--registration-bg);
   left: calc(2 / 48 * 100vw);
+  height: 50%;
 }
 
 .countdown .title {
