--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --heading: #4c4c4c;
   --body: #343434;
+  --background: #FFFEF5;
   --election-bg: linear-gradient(180deg, #93d2ff 0%, #f6e5b9 78.53%);
   --registration-bg: linear-gradient(180deg, #ff9090 0%, #e1c0b6 100%);
 }
@@ -10,6 +11,7 @@
 }
 
 body {
+  background: var(--background);
   color: var(--body);
   padding: 0;
   margin: 0;
@@ -26,20 +28,30 @@ h1, article {
   z-index: 1;
 }
 
+header {
+  display: flex;
+  align-items: center;
+  padding: calc(1 / 48 * 100vw) calc(1 / 48 * 100vw) 90px;
+}
+
+.logo {
+  width: calc(4 / 48 * 100vw);
+}
+
 h1 {
+  flex: 1;
   color: var(--heading);
   font-family: "Clash Grotesk", sans-serif;
   font-weight: 500;
   font-size: 59px;
   line-height: 73px;
-  margin: calc(1 / 48 * 100vw) calc(1 / 48 * 100vw) 90px;
 }
 
 article {
   display: grid;
   row-gap: 60px;
   grid-template-columns: 1fr;
-  margin: 0 calc(3 / 48 * 100vw);
+  padding: 0 calc(3 / 48 * 100vw);
   max-width: calc(28 / 48 * 100vw);
 }
 
@@ -63,6 +75,7 @@ p.inset {
   right: 0;
   bottom: 0;
   z-index: 0;
+  pointer-events: none;
 }
 
 .countdown > div {
@@ -82,6 +95,8 @@ p.inset {
   letter-spacing: 0.05em;
 
   transition: height ease-in-out 1s;
+
+  pointer-events: all;
 }
 
 .countdown > .election {
